<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/root_fragment"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        />

    <Button
        android:id="@+id/addRedFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:text="@string/add_red_fragment"
        android:textColor="@color/white"
        android:layout_below="@+id/title"
        android:layout_centerInParent="true"
        android:layout_marginTop="120dp"
        />

    <Button
        android:id="@+id/addBlueFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:text="@string/add_blue_fragment"
        android:textColor="@color/white"
        android:layout_below="@+id/addRedFragment"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        />

    <Button
        android:id="@+id/removeLastFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:text="@string/remove_last_fragment"
        android:textColor="@color/white"
        android:layout_below="@+id/addBlueFragment"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        />

    <Button
        android:id="@+id/replaceByGreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:text="@string/replace_with_green"
        android:textColor="@color/white"
        android:layout_below="@+id/removeLastFragment"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        />

</RelativeLayout>